# gh-etl

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
consumer/: Cargo.toml
consumer/src/: consumer.rs  main.rs
producer/: Cargo.toml  sample.env
producer/src/: main.rs  producer.rs  setup.rs
