[package]
name = "gh-etl-producer"
version = "0.1.0" 
edition = "2021"

[dependencies]
dotenv = { workspace = true }
serde_with = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "*", features = ["json"] }
rdkafka = { version = "0.25", features = ["ssl"] }
tokio = { version = "*", features = ["full"] }
